--- a/src/react/style/styleHome.scss
+++ b/src/react/style/styleHome.scss
@@ -51,3 +51,37 @@
   font-size: 1.2vw;
   text-align: center;
 }
+.divFormInput {
+  display: flex;
+  align-items: center;
+}
+.divInput {
+  width: 60%;
+  height: 97%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 1px solid #ffc107;
+  border-radius: 4px;
+}
+.divButton {
+  background-color: #ffc107;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  height: 3.6vw;
+  align-items: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.2s; /* Safari */
+  transition-duration: 0.2s;
+}
+.divButton:hover {
+  box-shadow: 0 6px 8px 0 rgba(111, 111, 111, 0.24),
+    0 9px 25px 0 rgba(111, 111, 111, 0.24);
+}
